# head_pose

./: Dockerfile  LICENSE  README.md  demo.py  model.txt  pyproject.toml  readme.md  requirements.txt  setup.py  ssdlite_mobilenet_v2_face_300_integer_quant_with_postprocess.tflite  stabilizer.py
.github/workflows/: main.yml
github/workflows/: github-actions-demo.yml
src/: demo.py  stabilizer.py  strlit_demo.py
strlit_demo/: strlit_demo.py
tests/: test_ci.py
