[tool.poetry]
name = "head_pose"
version = "0.1.0"
description = "Package for head pose estimation"
authors = ["antgoosev <antongoosev@gmail.com>"]
license = "Open source"

[tool.poetry.dependencies]
python = "3.8.13"
numpy = "1.19"
opencv-python = "^4.5.5"
argparse = "^1.4.0"
tflite-runtime = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
